2012-02-15  Leo Yang  <leo.yang@torchmobile.com.cn>

        [BlackBerry] Remove ResourceHolderImpl.cpp from build system
        https://bugs.webkit.org/show_bug.cgi?id=78779

        Reviewed by George Staikos.

        blackberry/Api/ResourceHolderImpl.cpp which hasn't been upstreamed
        has been removed internally. So remove it from the build system.

        * blackberry/CMakeListsBlackBerry.txt:

2012-02-15  Leo Yang  <leo.yang@torchmobile.com.cn>

        [BlackBerry] Upstream WebPageGroupLoadDeferrer.{h, cpp}
        https://bugs.webkit.org/show_bug.cgi?id=78770

        Reviewed by Rob Buis.

        Initial upstreaming, no new tests.

        * blackberry/Api/WebPageGroupLoadDeferrer.cpp: Added.
        * blackberry/Api/WebPageGroupLoadDeferrer.h: Added.

2012-02-15  Konrad Piascik  <kpiascik@rim.com>

        [BlackBerry] Upstream BlackBerry specific Web Inspector resources
        https://bugs.webkit.org/show_bug.cgi?id=78727

        Reviewed by Rob Buis.

        * blackberry/WebCoreSupport/inspectorBB.html: Added.
        * blackberry/WebCoreSupport/inspectorBB.js: Added.
        ():
        (InspectorFrontendHost.copyText):

2012-02-15  Mike Fenton  <mifenton@rim.com>

        Initial upstreaming of EditorClientBlackBerry
        https://bugs.webkit.org/show_bug.cgi?id=78730

        Reviewed by Rob Buis.

        Initial upstreaming, no new tests.

        * blackberry/WebCoreSupport/EditorClientBlackBerry.cpp: Added.
        (WebCore):
        (WebCore::EditorClientBlackBerry::EditorClientBlackBerry):
        (WebCore::EditorClientBlackBerry::pageDestroyed):
        (WebCore::EditorClientBlackBerry::shouldDeleteRange):
        (WebCore::EditorClientBlackBerry::shouldShowDeleteInterface):
        (WebCore::EditorClientBlackBerry::smartInsertDeleteEnabled):
        (WebCore::EditorClientBlackBerry::isSelectTrailingWhitespaceEnabled):
        (WebCore::EditorClientBlackBerry::enableSpellChecking):